--- a/src/pages/komponentbibliotek.astro
+++ b/src/pages/komponentbibliotek.astro
@@ -1,41 +1,42 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Link from "../components/Link.astro";
-import Button from "../components/Button.astro";
-import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
+import Book from "../components/Book.astro";
+import Text from "../components/Text.astro";
+import Heading from "../components/Heading.astro";
 ---
-<MainLayout title="Titel">
-	<main class="container mx-auto p-4">
-		<h1>Komponentbibliotek</h1>
-        <p>Her kan du finde alle de komponenter, der er brugt i dette projekt.</p>
-        <hr class="my-4" />
-        <!-- Link komponent instanser -->
-        <section>
-            <h2 class="font-serif text-2xl">Links</h2>
-            <p class="my-4"><Link href="#">Default link: </Link>Default linket er en del af en tekst, og burde gerne fungere som et <Link href="#">link</Link> i en paragraf.</Link></p>
-            <p class="my-4"><Link href="#" variant="primary">Link variant: primary</Link></p>
-            <p class="my-4"><Link href="#" variant="primary" size="small">Link variant: primary size small</Link></p>
-            <p class="my-4"><Link href="#" variant="primary" size="medium">Link variant: primary size medium</Link></p>
-            <p class="my-4"><Link href="#" variant="primary" size="large">Link variant: primary size large</Link></p>
-            <p class="my-4"><Link href="#" variant="secondary" size="small">Link variant: secondary size small</Link></p>
-            <p class="my-4"><Link href="#" variant="secondary" size="medium">Link variant: secondary size medium</Link></p>
-            <p class="my-4"><Link href="#" variant="secondary" size="large">Link variant: secondary size large</Link></p>
-        </section>
-        <!-- Slut på Link komponent instanser -->
-         <hr class="my-4" />
-        <!-- Buttons komponent instanser -->
-        <section>
-            <h2 class="font-serif text-2xl">Buttons</h2>
-            <p class="my-4"><Button>Default knap</Button></p>
-            <p class="my-4"><Button variant="primary">Button variant: primary</Button></p>
-            <p class="my-4"><Button variant="primary" size="small">Button variant: primary size small</Button></p>
-            <p class="my-4"><Button variant="primary" size="medium">Button variant: primary size medium</Button></p>
-            <p class="my-4"><Button variant="primary" size="large">Button variant: primary size large</Button></p>
-            <p class="my-4"><Button variant="secondary" size="small">Button variant: secondary size small</Button></p>
-            <p class="my-4"><Button variant="secondary" size="medium">Button variant: secondary size medium</Button></p>
-            <p class="my-4"><Button variant="secondary" size="large">Variant: secondary size large</Button></p>
-        </section>
-        <!-- Slut på Buttons komponent instanser -->
-	</main>
+
+<MainLayout title="KOMPONENTBIBLIOTEK">
+  <main class="container mx-auto p-4">
+    <Heading htmlheading="h2" size="medium" styling="blue" transform="uppercase">Komponentbibliotek</Heading>
+    <div class="pt-4">
+      <Text teksttype="brødtekst">Her kan du finde alle de komponenter, der er brugt i dette projekt.</Text>
+    </div>
+    <hr class="my-4" />
+    <!-- Link komponent instanser -->
+    <section>
+      <Heading htmlheading="h1" size="ekstralarge" styling="blue" transform="uppercase">h1</Heading>
+      <Heading htmlheading="h2" size="large" styling="blue" transform="uppercase">h2</Heading>
+      <div class="pb-10">
+        <Heading htmlheading="h3" size="medium" styling="grey" transform="uppercase">h3</Heading>
+      </div>
+      <div class="pb-10">
+        <Heading htmlheading="h4" size="small" font="inter" weight="light" transform="uppercase">h4</Heading>
+      </div>
+      <div class="pb-10">
+        <Heading htmlheading="h5" size="xsmall" font="inter" weight="light" transform="uppercase">h5</Heading>
+      </div>
+    </section>
+    <Text teksttype="brødtekst">P</Text>
+    <section class="pt-10">
+      <Heading htmlheading="h4" size="xsmall" font="inter" transform="uppercase" weight="light">Book</Heading>
+      <Book />
+    </section>
+    <section class="pt-10">
+      <Heading htmlheading="h4" size="xsmall" font="inter" transform="uppercase" weight="light">Links</Heading>
+      <div class="pt-4">
+        <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/public/facebook.png" alt="Facebookikon" class="w-4 pb-5 md:w-6" /></a>
+        <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/public/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
+      </div>
+    </section>
+  </main>
 </MainLayout>
