--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,41 +1,21 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @plugin '@tailwindcss/typography';
 @plugin '@tailwindcss/forms';
 @import "tailwindcss-animated";
 @import "tailwindcss-intersect";
 
-@font-face {
-  font-family: 'Honk';
-  src: url('/fonts/Honk-Regular-VariableFont_MORF,SHLN.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Quicksand';
-  src: url('/fonts/Quicksand-VariableFont_wght.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Domine';
-  src: url('/fonts/Domine-Regular.ttf') format('truetype');
-}
-
 @theme {
   /* Her tilføjes theme variable // tokens */
 
   /*Farver */
-  --color-primary-400: #00E4F5;
-  --color-primary-500: #006269;
-  --color-primary-600: #006D75;
-  --color-secondary-400: #F5E400;
-  --color-secondary-500: #F5A600;
-  --color-secondary-600: #F57A00;
+  --color-blue-100: #0057ff;
+  --color-grey-100: #dedede;
+  --color-orange-100: #fb370f;
 
   /*Typografi */
-  --font-display: 'Honk', monospace;
-  --font-sans: 'Quicksand', sans-serif;
-  --font-serif: 'Domine', serif;
-
+  --font-anton: "Anton", sans-serif;
+  --font-inter-tight: "Inter Tight", sans-serif;
 }
 
 @layer base {
@@ -46,12 +26,49 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
-  
 }
 
-@layer components{
-
+@layer components {
 }
-@layer utilities{
-  
+
+@layer utilities {
+  @keyframes slide-from-left {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes slide-from-right {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  .animate-from-left {
+    animation: slide-from-left 3s ease-out forwards;
+  }
+
+  .animate-from-right {
+    animation: slide-from-right 3s ease-out forwards;
+  }
+
+  @keyframes soft-bounce {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-25px); /* mindre hop end Tailwinds default */
+    }
+  }
+
+  .animate-soft-bounce {
+    animation: soft-bounce 1.5s infinite;
+  }
 }
