add correct path img

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@
     <p>E-MAIL:Sofielykke1@gmail.com</p>
   </div>
   <div class="col-span-1 col-start-2 flex justify-end gap-4 items-center p-4 pr-12">
-    <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/public/facebook.png" alt="Facebookikon" class="w-4 md:w-6" /></a>
-    <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/public/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
+    <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/facebook.png" alt="Facebookikon" class="w-4 md:w-6" /></a>
+    <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
   </div>
 </footer>
