--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Heading from "../components/Heading.astro";
       </div>
       <div class="col-span-1 col-start-1 md:col-span-1 md:col-start-2 md:row-start-2">
         <div class="relative">
-          <img class="relative pl-7 pr-7 md:pl-0 md:pr-0" src="/public/komponent2.png" />
+          <img class="relative pl-7 pr-7 md:pl-0 md:pr-0" src="/komponent2.png" />
           <div class="top-128 left-45 absolute md:top-161 md:left-50 text-right intersect:animate-fade-left intersect:duration-[5000ms]">
             <Heading htmlheading="h3" size="medium" styling="grey" transform="uppercase">Multiemedie <br />design</Heading>
           </div>
