facebook and insta

--- a/src/pages/komponentbibliotek.astro
+++ b/src/pages/komponentbibliotek.astro
@@ -34,8 +34,8 @@ import Heading from "../components/Heading.astro";
     <section class="pt-10">
       <Heading htmlheading="h4" size="xsmall" font="inter" transform="uppercase" weight="light">Links</Heading>
       <div class="pt-4">
-        <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/public/facebook.png" alt="Facebookikon" class="w-4 pb-5 md:w-6" /></a>
-        <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/public/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
+        <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/facebook.png" alt="Facebookikon" class="w-4 pb-5 md:w-6" /></a>
+        <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
       </div>
     </section>
   </main>
