--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -5,8 +5,9 @@ const Htmlheading = htmlheading;
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-  ekstralarge: "text-9xl md:text-[280px]",
-  large: "text-[105px] md:text-[240px]",
+  ekstralarge: "text-8xl md:text-[280px]",
+  large: "text-[80px] md:text-[240px]",
+  mlarge: "text-[100px] md:text-[240px]",
   medium: "text-6xl md:text-7xl",
   small: "md:text-6xl text-5xl",
   xsmall: "text-[30px] md:text-[36px]",
