--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Heading from "../components/Heading.astro";
       </div>
       <div class="mt-10 md:mt-0 leading-[1]" id="kompetencer">
         <div class="text-center col-span-1 md:row-start-3 md:col-span-2">
-          <Heading htmlheading="h2" size="large" styling="blue" transform="uppercase">Kompetencer</Heading>
+          <Heading htmlheading="h2" size="mlarge" styling="blue" transform="uppercase">Kompetencer</Heading>
         </div>
       </div>
       <div class="flex gap-1 p-8 mt-10 md:h-screen md:gap-3 md:col-span-2 items-end md:row-start-4 md:mt-30">
