add details phone size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import Heading from "../components/Heading.astro";
       </div>
       <div class="col-span-1 col-start-1 md:col-span-1 md:col-start-2 md:row-start-2">
         <div class="relative">
-          <img class="relative pl-7 pr-7 md:pl-0 md:pr-0" src="/komponent2.png" />
-          <div class="top-128 left-45 absolute md:top-161 md:left-50 text-right intersect:animate-fade-left intersect:duration-[5000ms]">
+          <img class="relative pl-7 pr-7 w-[500px] mx-auto md:w-full md:pl-0 md:pr-0" src="/komponent2.png" />
+          <div class="top-113 left-52 absolute md:top-161 md:left-50 text-right intersect:animate-fade-left intersect:duration-[5000ms]">
             <Heading htmlheading="h3" size="medium" styling="grey" transform="uppercase">Multiemedie <br />design</Heading>
           </div>
         </div>
@@ -34,7 +34,7 @@ import Heading from "../components/Heading.astro";
           <div class="intersect:animate-fade-right intersect:duration-[5000ms]">
             <Heading htmlheading="h3" size="medium" styling="grey" transform="uppercase">Enkelhed<br /> med <br />kant</Heading>
           </div>
-          <div class="text-right top-18 left-30 absolute intersect:animate-fade-left intersect:duration-[5000ms] md:top-21 md:left-35">
+          <div class="text-right top-14 left-25 absolute intersect:animate-fade-left intersect:duration-[5000ms] md:top-21 md:left-35">
             <Heading htmlheading="h4" size="small" font="inter" weight="light" transform="uppercase">Enkelhed<br /> med kant</Heading>
           </div>
         </div>
