--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,11 @@
 ---
 
 <footer class="bg-white text-black grid grid-cols-2 intersect:animate-fade-up intersect:duration-[5000ms]">
-  <div class="container mx-auto p-4 text-[12px] font-inter-tight font-light pl-12 md:text-[16px] col-span-1 col-start-1">
+  <div class="container mx-auto p-4 text-[12px] font-inter-tight font-light pl-5 md:pl-12 md:text-[16px] col-span-1 col-start-1">
     <p>&copy;SOFIE LYKKE SØNDERGAARD NIELSEN</p>
     <p>E-MAIL:Sofielykke1@gmail.com</p>
   </div>
-  <div class="col-span-1 col-start-2 flex justify-end gap-4 items-center p-4 pr-12">
+  <div class="col-span-1 col-start-2 flex justify-end gap-4 items-center p-4 pr-5 md:pr-12">
     <a href="https://www.facebook.com/sofielykke.nielsen/" target="_blank"> <img src="/facebook.png" alt="Facebookikon" class="w-4 md:w-6" /></a>
     <a href="https://www.instagram.com/sofie.lykke/" target="_blank"><img src="/Instagram.png" alt="Instagramikon" class="w-8 md:w-10" /></a>
   </div>
